pushing changes done with tutor

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 <body>
     <Header>Coding Quiz</Header>
     <button id="start">Start</button>
-    <h2 id="word"></h2>
+    <div id="word">
+       
+    </div>
+    <div id="hello"></div>
+
     <section>
         wins: <span id="wins">0</span>
         losses: <span id="losses">0</span>
