--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 <body>
     <Header>Coding Quiz</Header>
-    <button id="start">Start</button>
+    <div id="div">
+    <button id="start">Start Game</button>
+    </div>
     <div id="word">
        
     </div>
