--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <div id="word">
        
     </div>
-    <div id="hello"></div>
+    <div id="ques"></div>
 
     <section>
         wins: <span id="wins">0</span>
         losses: <span id="losses">0</span>
         <span id="timer">timer</span>
     </section>
-    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/quiz.js"></script>
 </body>
 </html>
