--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <div id="ques"></div>
 
     <section>
-        wins: <span id="wins">0</span>
-        losses: <span id="losses">0</span>
+        Correct: <span id="wins">0</span>
+        Incorrect: <span id="losses">0</span>
         <span id="timer">timer</span>
     </section>
     <script src="./assets/js/quiz.js"></script>
